# opencv_tutorials

./: README.md
Capitulo1/: CMakeLists.txt  LUT.cpp  LinearidLUT.cpp  LinearnegLUT.cpp  apuntadores.cpp  expLUT.cpp  log1LUT.cpp  log2LUT.cpp  pruebacinco.cpp  pruebacuatro.cpp  pruebados.cpp  pruebaseis.cpp  pruebatres.cpp  pruebauno.cpp
Capitulo2/: Blur.cpp  CMakeLists.txt  Filter1.cpp  Gauss1.cpp  Gauss2.cpp  Ownfilter.cpp  Vignette.cpp
Capitulo3/: 1bin_simple_threshold.cpp  2bin_simple_threshold.cpp  3bin_simple_threshold.cpp  4bin_simple_threshold.cpp  5bin_simple_threshold.cpp  6bin_simple_threshold.cpp  CMakeLists.txt
